--- a/CustomViewTouchScalableImageView/app/src/main/res/layout/activity_main.xml
+++ b/CustomViewTouchScalableImageView/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.hencoder.scalableimageview.view.ScalableImageView xmlns:android="http://schemas.android.com/apk/res/android"
+<!-- <com.hencoder.scalableimageview.view.ScalableImageView -->
+<com.hencoder.scalableimageview.view.MyScalableImageView2 xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
