--- a/CustomViewTouchViewGroup/app/src/main/res/layout/activity_main.xml
+++ b/CustomViewTouchViewGroup/app/src/main/res/layout/activity_main.xml
@@ -5,10 +5,65 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <View
+<!--    <ScrollView-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="match_parent">-->
+
+<!--        <LinearLayout-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:orientation="vertical">-->
+
+<!--            <TextView-->
+<!--                android:layout_width="match_parent"-->
+<!--                android:layout_height="200dp"-->
+<!--                android:text="内容1"-->
+<!--                android:background="#795548" />-->
+
+<!--            <TextView-->
+<!--                android:layout_width="match_parent"-->
+<!--                android:layout_height="200dp"-->
+<!--                android:text="内容2"-->
+<!--                android:background="#aa5522" />-->
+
+<!--            <TextView-->
+<!--                android:layout_width="match_parent"-->
+<!--                android:layout_height="200dp"-->
+<!--                android:text="内容3"-->
+<!--                android:background="#00ff00" />-->
+
+<!--            <TextView-->
+<!--                android:layout_width="match_parent"-->
+<!--                android:layout_height="200dp"-->
+<!--                android:text="内容4"-->
+<!--                android:background="#ffff00" />-->
+
+<!--            <TextView-->
+<!--                android:layout_width="match_parent"-->
+<!--                android:layout_height="200dp"-->
+<!--                android:text="内容5"-->
+<!--                android:background="#0000ff" />-->
+
+<!--        </LinearLayout>-->
+<!--    </ScrollView>-->
+
+    <com.hencoder.viewgroup.view.MyInnerScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="#795548" />
+        android:background="#00ffff">
+
+        <com.hencoder.viewgroup.view.MyInnerChildView
+            android:layout_width="300dp"
+            android:layout_height="300dp"
+            android:background="#4444ff"
+            />
+
+    </com.hencoder.viewgroup.view.MyInnerScrollView>
+
+<!--    <View-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="match_parent"-->
+<!--        android:background="#795548" />-->
 
     <View
         android:layout_width="match_parent"
