--- a/CustomViewDrawing/app/src/main/res/layout/activity_main.xml
+++ b/CustomViewDrawing/app/src/main/res/layout/activity_main.xml
@@ -1,8 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.hencoder.drawing.view.PieView xmlns:android="http://schemas.android.com/apk/res/android"
+<!-- com.hencoder.drawing.view.PieView  -->
+<!-- com.hencoder.drawing.view.MyView  -->
+<!-- com.hencoder.drawing.view.MyDashboardView -->
+<com.hencoder.drawing.view.MyDashboardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-</com.hencoder.drawing.view.PieView>
+</com.hencoder.drawing.view.MyDashboardView>
