--- a/CustomViewText/app/src/main/res/layout/activity_main.xml
+++ b/CustomViewText/app/src/main/res/layout/activity_main.xml
@@ -5,8 +5,10 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <com.hencoder.text.view.MultilineTextView
+    <!--  MultilineTextView  -->
+    <com.hencoder.text.view.MyMultilineTextView2
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="wrap_content"
+        />
 
 </LinearLayout>
