--- a/MotionLayout/example/src/main/res/layout/activity_main.xml
+++ b/MotionLayout/example/src/main/res/layout/activity_main.xml
@@ -26,4 +26,12 @@
         android:onClick="onClick"
         android:text="MotionLayoutActivity"
         android:textAllCaps="false" />
+
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:onClick="onClick"
+        android:text="ObjectAnimatorActivity"
+        android:textAllCaps="false" />
+
 </LinearLayout>
