--- a/MotionLayout/transition/src/main/res/layout/activity_float_action_button.xml
+++ b/MotionLayout/transition/src/main/res/layout/activity_float_action_button.xml
@@ -1,18 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/motion_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    app:layoutDescription="@xml/sample_keytimecycle"
+    app:layoutDescription="@xml/sample_keytrigger"
     app:showPaths="true"
     app:motionDebug="SHOW_ALL"
     tools:context=".SampleActivity">
     <!--      app:layoutDescription="@xml/sample"  -->
 
-    <androidx.constraintlayout.utils.widget.ImageFilterView
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/view"
-        android:src="@drawable/avatar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="@color/colorAccent"
