--- a/MotionLayout/transition/src/main/res/layout/activity_motion_simple.xml
+++ b/MotionLayout/transition/src/main/res/layout/activity_motion_simple.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    app:layoutDescription="@xml/motion">
+    app:layoutDescription="@xml/activity_motion_layout_scene_simple">
 
     <View
         android:id="@+id/background"
